# tonguetoquill-usaf-memo

./: .gitignore  .gitignore~core  .gitignore~package  0.1.1  CASCADES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_GUIDE.md  LICENSE  PR.md  README.md  README_TYPST_WRITER.md  build.sh  indorsement.typ  lib.typ  main.typ  orchestration.txt  test-simple.typ  test-syntax.typ  typst.toml  utils.typ
.github/agents/: Architect.md  Programmer.md
.github/prompts/: double-space-sentence.prompt.md  single-space-sentence.prompt.md
.github/workflows/: build-core.yml  sync-release-core.yml
dev_assets/: afh33-337_chapter14  debug_test.typ  requirements.txt  starkindustries_full.typ  starkindustries_local.typ  test_autonumbering.py  test_autonumbering.typ  test_bug.typ  test_multiblock.typ  test_spacing_regression.py  test_spacing_regression.typ  usaf-template_local.typ  ussf-template_local.typ
docs/: official-memorandum-template.txt
prompts/: double-space-sentence.md
prose/archive/: CASCADES.md  README.md
prose/designs/: INDEX.md  backmatter-rendering-unification.md  composable-show-rules.md  daf-memo-style.md  import-chain-simplification.md  indorsement-approval-action.md  paragraph-numbering.md  state-management-unification.md  (+1 more)
rust_src/: lib.rs
src/: backmatter.typ  body.typ  config.typ  frontmatter.typ  indorsement.typ  lib.typ  mainmatter.typ  primitives.typ  utils.typ
template/: content-guide.typ  daf-template.typ  guide.typ  starkindustries.typ  usaf-memo.typ  usaf-template.typ  ussf-memo.typ  ussf-template.typ
tests/: test-indorsements.typ
(+18 files in other folders)
